css fix: spacing change

--- a/src/styles/_md-styles.scss
+++ b/src/styles/_md-styles.scss
@@ -17,6 +17,7 @@
   color: black;
 }
 
+/* stylelint-disable no-descending-specificity */
 example, /* stylelint-disable-line selector-type-no-unknown */
 .example {
   padding: 2rem;
@@ -46,7 +47,6 @@ example, /* stylelint-disable-line selector-type-no-unknown */
     background: var(--color-text-on-primary);
   }
 
-  /* stylelint-disable no-descending-specificity */
   .switch {
     max-width: 450px;
     margin: 0;
@@ -108,7 +108,6 @@ example, /* stylelint-disable-line selector-type-no-unknown */
       }
     }
   }
-  /* stylelint-enable no-descending-specificity */
 
   .spa {
     .slide-list {
@@ -291,7 +290,6 @@ example, /* stylelint-disable-line selector-type-no-unknown */
   p {
     padding: 0 0 0 1rem;
   }
-  
 }
 
 .sticky-wrapper {
@@ -328,7 +326,7 @@ example, /* stylelint-disable-line selector-type-no-unknown */
   font-size: 2rem;
   letter-spacing: .25rem;
   margin-bottom: 3rem;
-  box-shadow: 0 0 5px 1px rgba(#000, .1);
+  box-shadow: 0 0 5px 1px rgba(var(--color-on-tertiary), .1);
   position: relative;
 
   .scale {
@@ -365,17 +363,25 @@ example, /* stylelint-disable-line selector-type-no-unknown */
   }
 }
 
-
 .star-rating {
   display: flex;
   align-items: center;
-
-  // flex-direction: row-reverse; /* Keep row-reverse for visual order */
   justify-content: space-around;
 }
 
-/* stylelint-disable no-descending-specificity */
-input.star + label {
+.star-rating input.star {
+  position: absolute; /* Keep radio buttons off-screen */
+  opacity: 0;
+}
+
+input.star:focus + label,
+input.star:focus-visible + label {
+  outline: .5rem auto Highlight;
+  outline: -webkit-focus-ring-color auto 1px;
+  outline-offset: 4px;
+}
+
+.star-rating input.star + label {
   padding: 1rem 0;
   height: 4rem;
   width: fit-content;
@@ -396,20 +402,14 @@ input.star + label {
   }
 }
 
-input[type="radio"]:checked ~ label::before {
-  background: url("../assets/svgs/star-filled.svg") no-repeat 0 0;
-}
-/* stylelint-enable no-descending-specificity */
-
 .scrolling-container {
   height: 250px;
   overflow: auto;
 }
+
 .star-rating input.star:checked ~ label::before {
   background: url("../assets/svgs/star-filled.svg") no-repeat center center;
 }
-
-
 
 /* Reverse the visual order of the labels */
 .star-rating input.star#star-1 + label { order: 5; }
@@ -417,3 +417,5 @@ input[type="radio"]:checked ~ label::before {
 .star-rating input.star#star-3 + label { order: 3; }
 .star-rating input.star#star-4 + label { order: 2; }
 .star-rating input.star#star-5 + label { order: 1; }
+
+/* stylelint-enable no-descending-specificity */
